# flytekit-simple-example

./: README.md  docker-compose.yml  flyte-package.tgz  flyte.config  kserve-manifest.yaml  model.joblib  pyproject.toml  vectorizer.joblib
workflows/: hello_world.py  model_deployment.py  test.py
