[project]
name = "flyte-example"
version = "0.1.0"
description = "A simple Flyte workflow example"
requires-python = ">=3.8"

[tool.poetry.dependencies]
python = "^3.8"
flytekit = "^1.10.0"
flytekitplugins-pod = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 